Closed Bug 827086 Opened 13 years ago Closed 13 years ago

Compilation error "a space is required between consecutive right angle brackets (use '> >')" in dom/UndoManager.h

Categories

(Core :: DOM: Core & HTML, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla20

People

(Reporter: smontagu, Assigned: smontagu)

References

Details

Attachments

(1 file, 1 obsolete file)

Building mozilla-central today I get the following error: In file included from /home/smontagu/mozwork/hgtree/mozilla/obj-x86_64-unknown-linux-gnu/dom/bindings/ElementBinding.cpp:23: ../../dist/include/mozilla/dom/UndoManager.h:41:65: error: a space is required between consecutive right angle brackets (use '> >') Nullable<nsTArray<nsRefPtr<nsIUndoManagerTransaction>>>& aItems, ^~ > > 1 error generated.
Attached patch Add the spaces (obsolete) — Splinter Review
Adding the spaces like the man said fixes it for me.
Attachment #698401 - Flags: review?(wchen)
Attachment #698401 - Attachment is obsolete: true
Attachment #698401 - Flags: review?(wchen)
Attached patch Add the spacesSplinter Review
Added a couple more places
Assignee: nobody → smontagu
Attachment #698403 - Flags: review?(wchen)
Comment on attachment 698403 [details] [diff] [review] Add the spaces Review of attachment 698403 [details] [diff] [review]: ----------------------------------------------------------------- r=me, though I'd prefer symmetric spaces (as in Nullable< nsTArray< nsRefPtr<nsIUndoManagerTransaction> > > ).
Attachment #698403 - Flags: review?(wchen) → review+
That is not the common coding style. It should be Nullable<nsTArray<nsRefPtr<nsIUndoManagerTransaction> > >
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla20
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: