Add spaces between consecutive angle brackets. Bug 827086, r=Ms2ger